# Pomodoro_pet

./: .env  .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.test.yaml  docker-compose.yaml  fixtures.py  gunicorn_conf.py  main.py  pyproject.toml  Пометки.txt
alembic/: env.py
alembic/versions/: 2024_11_17_1806-6982160f22f8_create_account_table.py
app/: dependency.py  exception.py  main.py  settings.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  categories.py  ping.py  tasks.py  user.py
app/infrastructure/cache/: __init__.py  accessor.py
app/infrastructure/database/: __init__.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/service/: __init__.py  auth.py  task.py  user.py
app/shema/: __init__.py  auth.py  categories.py  users.py
database/: database.py  settings.py
handlers/: auth.py  ping.py
models/: __init__.py  user.py
repository/: cache_task.py
service/: task.py
shema/: __init__.py  tasks.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/integration/auth/: test_auth_service.py
tests/unit/auth/: test_auth_service.py
