[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = ["GORYZONT <1goryzont1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = "^5.2.0"
python-jose = "^3.3.0"
requests = "^2.32.3"
httpx = "^0.27.2"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
